css/main-layout.css
*{
  padding: 0;
  margin: 0;
  font-family: 'Inconsolata', monospace;
  font-size: 1.3rem;
  color: #797979;
}
::-webkit-scrollbar {
  width: 3px;
  height: 3px;
}
::-webkit-scrollbar-button {
  width: 12px;
  height: 12px;
}
::-webkit-scrollbar-thumb {
  background-color: #ee8e6b;
  background-image: linear-gradient(315deg, #ee8e6b 0%, #ef6da0 74%);

  border: 0px none #ffffff;
  border-radius: 50px;
}
::-webkit-scrollbar-thumb:hover {
  background-color: #ee8e6b;
  background-image: linear-gradient(315deg, #ee8e6b 0%, #ef6da0 74%);

}
::-webkit-scrollbar-thumb:active {
  background-color: #ee8e6b;
  background-image: linear-gradient(315deg, #ee8e6b 0%, #ef6da0 74%);
}
::-webkit-scrollbar-track {
  background: #646568;
  border: 0px none #ffffff;
  border-radius: 50px;
}
::-webkit-scrollbar-track:hover {
  background: #646568;
}
::-webkit-scrollbar-track:active {
  background: #646568;
}
::-webkit-scrollbar-corner {
  background: transparent;
}
.sidebar {
  /* critical sizing and position styles */
  width: 13.3rem;
  height: 100%;
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: -13.3rem;
  z-index: 100;

  transition: left 0.2s;

  /* non-critical appearance styles */
  list-style: none;
  background-color: #202020;
}

.sidebar-item {
  width: 13.3rem;
}

.sidebar-item .nav-item a {
  display: block;
  padding: 0.5rem;
  padding-left: 2rem;
  color: white;
  font-size: 0.8rem;
  text-decoration: none;
  border-top: 1px solid #373737;
}

.sidebar-item .nav-item a:hover {
  background-color: #373737;
}
.sidebar-item .navigation{
  border-bottom: 1px solid #373737;
}

/* Site Wrapper - Everything that isn't sidebarigation */
.site-wrap {
  min-height: 100vh !important;
  min-width: 100%;
  position: relative;
  top: 0;
  bottom: 100%;
  left: 0;
  z-index: 1;
  padding: 4rem;
  background-color: #000000;
  background-image: linear-gradient(147deg, #000000 0%, #252525 74%);
}

/* sidebar Trigger */
.sidebar-trigger {
  /* critical styles - hide the checkbox input */
  position: absolute;
  clip: rect(0, 0, 0, 0);
}

label[for="sidebar-trigger"] {
  /* critical positioning styles */
  position: fixed;
  left: 15px; top: 15px;
  z-index: 2;

  /* non-critical apperance styles */
  cursor: pointer;
  color: white;
  background-color: #36393F;
  border: 1px solid white;
  border-radius: 10px;
  padding: 0.5rem 0.5rem;
}

.sidebar-trigger + label, .site-wrap {
  transition: left 0.2s;
}

.sidebar-trigger:checked + label {
  left: 14.1rem;
  color: #36393F;
  background-color: white;
  border: 1px solid white;
}

.sidebar-trigger:checked ~ .site-wrap {
  left: 13.3rem;
}
.sidebar-trigger:checked ~ .sidebar {
  left: 0;
}
.selected{
  background-color: #373737;
}
body {
  overflow: hidden;
}
*,*:before,*:after{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;margin:0;padding:0;}
html, body { height: 100%; width: 100%;}


.personal-wrapper, .personal-wrapper img{
  max-width: 10rem;
}
.personal-wrapper img{
  border-radius: 10px;
  transform-origin: 100% 0%;
  transition-duration: 0.5s;
  transform: rotateY(180deg);
}
.personal-wrapper{
  margin: 2.5rem auto;
}

.photo-container{
  position: relative;
  left: -10rem;
  z-index: 2;
}

.personal-wrapper:hover img{
  transform: rotateY(0);
}

.info{
  position: absolute;
  top: 2.5rem;
  width: 10rem;
}
.info .text{
  width: 9rem;
  margin-left: auto;
  margin-right: auto;
  max-height: 8rem;
  font-size: 0.7rem;
  overflow-y: auto;
  word-wrap: break-word;
}

.personal-links{
  padding-top: 0.3rem;
  padding-left: 0.1rem;
  z-index: 1;
  text-decoration: none;
  list-style-type: none;
  list-style: none;
  text-align: center;
}
.personal-links li{
  display: inline-block;
}
.personal-links li *{ color: white; }
.personal-links li:hover *{
  color: #7289DA;
}

@media only screen
  and (min-device-width: 1024px)
  and (max-device-width: 1366px)
  and (-webkit-min-device-pixel-ratio: 2) {
    html{
      font-size: 3rem;
    }
}

